Bug 154581 - WebRTC: RTCPeerConnection: Sort out responsibilities of close() and stop()
Summary: WebRTC: RTCPeerConnection: Sort out responsibilities of close() and stop()
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebCore Misc. (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL:
Keywords:
Depends on:
Blocks: 143211
  Show dependency treegraph
 
Reported: 2016-02-23 03:57 PST by Adam Bergkvist
Modified: 2016-02-24 00:14 PST (History)
3 users (show)

See Also:


Attachments
Proposed patch (5.58 KB, patch)
2016-02-23 04:11 PST, Adam Bergkvist
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Adam Bergkvist 2016-02-23 03:57:02 PST
RTCPeerConnection's stop() and close() could be implemented as one calling the other to avoid duplicating code.
Comment 1 Adam Bergkvist 2016-02-23 04:11:17 PST
Created attachment 272007 [details]
Proposed patch
Comment 2 Adam Bergkvist 2016-02-23 23:24:12 PST
Comment on attachment 272007 [details]
Proposed patch

Thank you
Comment 3 WebKit Commit Bot 2016-02-24 00:14:53 PST
Comment on attachment 272007 [details]
Proposed patch

Clearing flags on attachment: 272007

Committed r197020: <http://trac.webkit.org/changeset/197020>
Comment 4 WebKit Commit Bot 2016-02-24 00:14:57 PST
All reviewed patches have been landed.  Closing bug.